--- a/seesharp/Properties/Resources.resx
+++ b/seesharp/Properties/Resources.resx
@@ -238,4 +238,16 @@
   <data name="LOADING" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LOADING.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Zombie_head" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Zombie_head.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Zombie_paper_body" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Zombie_paper_body.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Zombie_paper_leftarm_lower" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Zombie_paper_leftarm_lower.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Zombie_paper_leftarm_upper2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Zombie_paper_leftarm_upper2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
